<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.preference.ListPreference
        android:key="@string/preference_theme_key"
        android:title="@string/preference_theme_title"
        android:dialogTitle="@string/preference_theme_dialog_title"
        app:useSimpleSummaryProvider="true"
        tools:icon="@drawable/preference_icon_theme_auto"
        android:entries="@array/preference_theme_entries"
        android:entryValues="@array/preference_theme_entry_values"
        android:defaultValue="@string/preference_theme_entry_value_auto"/>

    <androidx.preference.Preference
        android:key="@string/preference_history_key"
        android:title="@string/preference_history_title"
        android:summary="@string/preference_history_summary"
        android:icon="@drawable/preference_icon_history"
        android:selectable="true" />

    <androidx.preference.Preference
        android:key="@string/preference_cache_key"
        android:title="@string/preference_cache_title"
        android:summary="@string/preference_cache_summary"
        android:icon="@drawable/preference_icon_cache"
        android:selectable="true" />

    <androidx.preference.SwitchPreferenceCompat
        android:key="@string/preference_data_saving_key"
        android:title="@string/preference_data_saving_title"
        android:summary="@string/preference_data_saving_summary"
        android:icon="@drawable/preference_icon_data_saver"
        android:defaultValue="@bool/preference_data_saving_default" />

    <androidx.preference.Preference
        android:key="@string/preference_licenses_key"
        app:title="@string/preference_licenses_title"
        android:summary="@string/preference_licenses_summary"
        android:icon="@drawable/preference_icon_licenses"
        android:selectable="true"/>

    <androidx.preference.Preference
        android:key="@string/preference_feedback_key"
        android:title="@string/preference_feedback_title"
        android:summary="@string/preference_feedback_summary"
        android:icon="@drawable/preference_icon_feedback"
        android:selectable="true">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/preference_feedback_url"/>
    </androidx.preference.Preference>

    <androidx.preference.Preference
        android:key="@string/preference_system_settings_key"
        android:title="@string/preference_system_settings_title"
        android:summary="@string/preference_system_settings_summary"
        android:icon="@drawable/preference_icon_system_settings"
        android:selectable="true"/>

    <androidx.preference.Preference
        android:key="@string/preference_version_key"
        android:title="@string/preference_version_title"
        tools:summary="1.0.0"
        android:icon="@drawable/preference_icon_version"
        android:selectable="false" />

</androidx.preference.PreferenceScreen>