<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="72dp">

    <ImageView
        android:id="@+id/iv_pokemon"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/pokemon_background_placeholder"
        android:contentDescription="@string/content_description_pokemon_sprite" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:gravity="center_vertical|start"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_name"
            style="?attr/textAppearanceBodyLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_view_placeholder_top"
            android:textColor="?attr/colorOnSurface" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/national_pokedex_number"
            style="?attr/textAppearanceBodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_view_placeholder_bottom" />
    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        app:shapeAppearanceOverlay="@style/circleImageView"
        android:contentDescription="@string/content_description_type"
        app:contentPadding="6dp"
        android:layout_marginEnd="@dimen/list_horizontal_padding"
        android:layout_gravity="center"
        android:background="?attr/colorSurfaceContainerHighest"
        android:scaleType="fitCenter"
        android:id="@+id/iv_primary_type"
        android:layout_width="32dp"
        android:layout_height="32dp"/>

    <com.google.android.material.imageview.ShapeableImageView
        app:shapeAppearanceOverlay="@style/circleImageView"
        android:contentDescription="@string/content_description_type"
        app:contentPadding="6dp"
        android:layout_marginEnd="4dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:background="?attr/colorSurfaceContainerHighest"

        android:id="@+id/iv_secondary_type"
        android:layout_width="32dp"
        android:layout_height="32dp"/>
    <ImageView
        android:layout_marginEnd="@dimen/list_horizontal_padding"
        android:layout_margin="12dp"
        android:contentDescription="@string/content_description_placeholder_favourite"
        android:src="@drawable/favorite_filled"
        android:layout_gravity="center"
        android:id="@+id/cb_favourite"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:tint="?attr/colorSurfaceContainerHighest" />
</LinearLayout>
